[gd_scene load_steps=4 format=3 uid="uid://bifdjkrggl7yy"]

[ext_resource type="Script" uid="uid://bustlx6arer0e" path="res://Scripts/draganddrop.gd" id="1_rx73v"]
[ext_resource type="Texture2D" uid="uid://df0xqp48qnpvl" path="res://imagenes/personajes/coco.png" id="2_rx73v"]
[ext_resource type="Texture2D" uid="uid://bqt3kjdndl00c" path="res://imagenes/botones/iconLevel.png" id="3_mulva"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rx73v")

[node name="coco" type="Sprite2D" parent="."]
position = Vector2(360, 415)
scale = Vector2(3.291, 3)
texture = ExtResource("2_rx73v")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 577.0
offset_top = 34.0
offset_right = 705.0
offset_bottom = 162.0
texture_normal = ExtResource("3_mulva")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
